--- a/Lectures/Feb14-excercise.ipynb
+++ b/Lectures/Feb14-excercise.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['Algeria', 'Argentina', 'Australia', 'Brazil', 'Canada', 'China',\n       'Congo, Dem. Rep.', 'India', 'Kazakhstan', 'Russian Federation',\n       'Saudi Arabia', 'Sudan', 'United States'], dtype=object)"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Solution 2\n",
     "\n",
-    "# t2 = table[table[\"LandArea\"] > 2000]\n",
-    "# t2[\"Country\"].values\n",
-    "\n",
-    "table[\"LandArea\"] > 2000"
+    "t2 = table[table[\"LandArea\"] > 2000]\n",
+    "t2[\"Country\"].values"
    ]
   },
   {
